# ssdb

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  server.rs
src/sql/: mod.rs  schema.rs
src/sql/engine/: kv.rs  mod.rs
src/sql/execution/: mod.rs
src/sql/plan/: mod.rs  optimizer.rs  planner.rs
src/sql/types/: expression.rs  mod.rs
src/storage/kv/: encoding.rs  mod.rs  mvcc.rs  std_memory.rs  test.rs
