[package]
name = "ssdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = "4.3.16"
config = "0.13.3"
derivative = "2.2.0"
futures = "0.3.28"
futures-util = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.19"
rand = "0.8.5"
regex = "1.9.1"
serde = "1.0.171"
serde_derive = "1.0.171"
simplelog = "0.12.1"
sqlparser = "0.36.1"
tokio = { version = "1.29.1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
